--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h3 class="qualification-title">Web Developer</h3>
             <span class="qualification-subtitle">Creating Concepts & Developing Designs</span>
             <div class="qualification-calendar">
-              <i class="uil uil-calendar-alt"></i> 2024 - Present
+              <i class="uil uil-calendar-alt"></i> jul 2024 - jan 2025
             </div>
           </div>
         </div>
