--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
     <h1>Hey, I'm Sowndariya</h1>
     <h3>Full-Stack Web Developer</h3>
-    <p>I am currently doing an internship at Creating Concepts and Developing Design, and also freelancing.</p>
+    <p>I’m passionate about building scalable, user-focused web applications and exploring the world of technology through real-time projects and continuous learning.</p>
     <a href="#contact" class="btn btn-primary">Get in Touch</a>
     <div class="scroll-down mt-4">
       <a href="#about" class="down-arrow">
