--- a/index.html
+++ b/index.html
@@ -354,17 +354,21 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Exceptional creativity and quick execution made our project a success. Highly impressed with the results!</span>
+                  <span>Sowndariya joined us as an intern with a strong foundation and a desire to learn Front End Development. 
+                    During her time at Creating Concepts and Developing Designs, especially on the Zekesys Pvt Ltd website project, 
+                    she demonstrated remarkable growth. She quickly grasped new Front End technologies and applied them effectively, 
+                    and her enthusiasm and commitment to excellence were evident throughout her internship. 
+                    I firmly believe she will excel in her future endeavors within Full Stack Development.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/kavinkumar.png" class="testimonial-img" alt="">
-                <h3>Kavinkumar</h3>
-                <h4>Android Developer</h4>
+                <img src="assets/img/micheal.jpeg" class="testimonial-img" alt="">
+                <h3>Ramli Michael</h3>
+                <h4>Creative Director of The Branding Machans</h4>
               </div>
             </div>
     
             <!-- Testimonial 2 -->
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
@@ -375,7 +379,7 @@
                 <h3>Sharan Kumar</h3>
                 <h4>Frontend Developer</h4>
               </div>
-            </div>
+            </div>-->
           </div>
           <div class="swiper-pagination"></div>
         </div>
