--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="index.html#skill"><i class="bi bi-code-square  navicon"></i> Skills</a></li>
         <li><a href="index.html#portfolio"><i class="bi bi-file-earmark-text navicon"></i> Project</a></li>
-        <li><a href="index.html#Blog"><i class="bi bi-bing navicon"></i> Blog</a></li>
+        <li><a href="index.html#qualification"><i class="bi bi-award"></i> Qualification</a></li>
         <li><a href="index.html#testimonials"><i class="bi bi-quote navicon"></i>Testimonial</a></li>
         <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
