Updated project files and images

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
       <div class="projects-grid">
         <div class="project-card" data-category="Frontend" onclick="openPopup('zekesys')">
-          <img src="assets/img/work5.jpg" alt="Zekesys" class="project-image">
+          <img src="assets/img/zekesys.png" alt="Zekesys" class="project-image">
           <h3 class="project-title">Zekesys</h3>
           <div class="project-links">
             <a href="https://zekesys.com/" class="project-link" target="_blank">Demo →</a>
@@ -178,7 +178,7 @@
         </div>
         
         <div class="project-card" data-category="Frontend" onclick="openPopup('todo')">
-          <img src="assets/img/work1.jpg" alt="Todo List" class="project-image">
+          <img src="assets/img/todo.png" alt="Todo List" class="project-image">
           <h3 class="project-title">Todo List</h3>
           <div class="project-links">
             <a href="https://sowndariya-k.github.io/TODO/" class="project-link" target="_blank">Demo →</a>
@@ -187,7 +187,7 @@
         </div>
         
         <div class="project-card" data-category="Frontend" onclick="openPopup('freelanceProject')">
-          <img src="assets/img/port3.jpg" alt="Freelance project" class="project-image">
+          <img src="assets/img/sk.png" alt="Freelance project" class="project-image">
           <h3 class="project-title">Freelance Project</h3>
           <div class="project-links">
             <a href="https://kavinkumar-r.netlify.app/" class="project-link" target="_blank">Demo →</a>
@@ -203,11 +203,11 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="Web Application" onclick="openPopup('spendWiseProject')">
+        <div class="project-card" data-category="Frontend" onclick="openPopup('spendWiseProject')">
   <img src="assets/img/spend.png" alt="SpendWise" class="project-image">
   <h3 class="project-title">SpendWise Finance Tracker</h3>
   <div class="project-links">
-    <a href="https://github.com/sowndariya-k/SpendWise" class="project-link" target="_blank">Demo →</a>
+    <a href="https://spendease.netlify.app/" class="project-link" target="_blank">Demo →</a>
     <a href="https://github.com/sowndariya-k/SpendWise" class="project-link" target="_blank">Source →</a>
   </div>
 </div>
