--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <p class="about-description py-3">
       I'm an aspiring software developer with a passion for building impactful and user-centric solutions. With hands-on experience in 10+ web projects, I specialize in creating clean, functional interfaces using modern technologies. I'm currently exploring AWS Cloud, with a growing focus on cloud security and scalable architectures. I actively take part in tech events and certified courses to stay updated, and I enjoy working in collaborative teams.I love solving real problems, constantly learning, and building secure, impactful applications that make a difference.
     </p>
-    <a href="assets/img/SOWNDARIYA_K.pdf" class="resume-btn" target="_blank">
+    <a href="https://drive.google.com/file/d/1mbDSKHYn8mhWnpp8nm0Yl1F8mmB7yx-e/view?usp=sharing" class="resume-btn" target="_blank">
       View Resume
     </a>
   </div>
@@ -168,6 +168,7 @@
         <span class="filter-item" data-filter="Cloud" onclick="filterProjects('Cloud')">Cloud</span>
       </div>
       <div class="projects-grid">
+
         <div class="project-card" data-category="Frontend" onclick="openPopup('zekesys')">
           <img src="assets/img/zekesys.png" alt="Zekesys" class="project-image">
           <h3 class="project-title">Zekesys</h3>
@@ -176,7 +177,7 @@
             <a href="https://github.com/Karthi282k/zekesys" class="project-link" target="_blank">Source →</a>
           </div>
         </div>
-        
+
         <div class="project-card" data-category="Frontend" onclick="openPopup('todo')">
           <img src="assets/img/todo.png" alt="Todo List" class="project-image">
           <h3 class="project-title">Todo List</h3>
