add new project

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   <link href="assets/img/sowndariya k.png" rel="apple-touch-icon"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@iconscout/unicons/css/line.css">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Fonts --><link href="https://fonts.googleapis.com" rel="preconnect">
+<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -207,8 +206,16 @@
   <img src="assets/img/spend.png" alt="SpendWise" class="project-image">
   <h3 class="project-title">SpendWise Finance Tracker</h3>
   <div class="project-links">
-    <a href="https://spendease.netlify.app/" class="project-link" target="_blank">Demo →</a>
+    <a href="https://sowndariya-k.github.io/SpendWise/" class="project-link" target="_blank">Demo →</a>
     <a href="https://github.com/sowndariya-k/SpendWise" class="project-link" target="_blank">Source →</a>
+  </div>
+</div>
+ <div class="project-card" data-category="Frontend" onclick="openPopup('morningAuraProject')">
+  <img src="assets/img/morningaura.png" alt="morningAura" class="project-image">
+  <h3 class="project-title">MorningAura Daily Task</h3>
+  <div class="project-links">
+    <a href="https://sowndariya-k.github.io/Morning-Aura/" class="project-link" target="_blank">Demo →</a>
+    <a href="https://github.com/sowndariya-k/Morning-Aura" class="project-link" target="_blank">Source →</a>
   </div>
 </div>
       </div>
