new section updates

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <li><a href="index.html#skill"><i class="bi bi-code-square  navicon"></i> Skills</a></li>
         <li><a href="index.html#portfolio"><i class="bi bi-file-earmark-text navicon"></i> Project</a></li>
         <li><a href="index.html#qualification"><i class="bi bi-bing navicon"></i> Qualification</a></li>
+        <li><a href="index.html#achievements"><i class="bi bi-trophy navicon"></i> Achievements</a></li>
         <li><a href="index.html#testimonials"><i class="bi bi-quote navicon"></i>Testimonial</a></li>
         <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
@@ -397,7 +398,9 @@
       </div>
 
       <!-- Responsibilities -->
-      <div class="achievement-card" data-aos="fade-up" data-aos-delay="200">
+      <!-- Responsibilities -->
+<div class="achievement-card responsibility-card" data-aos="fade-up" data-aos-delay="200">
+
         <div class="card-icon">
           <i class="bi bi-people-fill"></i>
         </div>
@@ -417,7 +420,41 @@
   </div>
 </section>
 
-  
+  <!-- Publications Section -->
+<section id="publications" class="publications section">
+  <div class="container">
+
+    <h2 class="title">Publications</h2>
+
+    <div class="publication-card" data-aos="fade-up">
+
+      <h3 class="publication-title">
+        Blockchain Technology in Secure Voting Systems:
+        Enhancing Transparency and Trust
+      </h3>
+
+      <p class="publication-meta">
+        <strong>Journal:</strong> IEEE Xplore · 2024
+      </p>
+
+      <p class="publication-authors">
+        <strong>Authors:</strong> Sowndariya K, Gomathi A, Sachidhanandam P,
+        Kavinkumar R, Sanju P, Ramkumar R
+      </p>
+
+      <p class="publication-doi">
+        <strong>DOI:</strong>
+        <a href="https://doi.org/10.1109/ICCES63552.2024.10860165"
+           target="_blank" rel="noopener noreferrer">
+          10.1109/ICCES63552.2024.10860165
+        </a>
+      </p>
+
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
