--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li><a href="index.html#portfolio"><i class="bi bi-file-earmark-text navicon"></i> Project</a></li>
         <li><a href="index.html#qualification"><i class="bi bi-bing navicon"></i> Qualification</a></li>
         <li><a href="index.html#achievements"><i class="bi bi-trophy navicon"></i> Achievements</a></li>
+        <li><a href="index.html#publications"><i class="bi bi-journal-text navicon"></i> Publications</a></li>
         <li><a href="index.html#testimonials"><i class="bi bi-quote navicon"></i>Testimonial</a></li>
         <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
