--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <li><a href="index.html#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="index.html#skill"><i class="bi bi-code-square  navicon"></i> Skills</a></li>
-        <li><a href="index.html#portfolio"><i class="bi bi-file-earmark-text navicon"></i> Project</a></li>
-        <li><a href="index.html#qualification"><i class="bi bi-bing navicon"></i> Qualification</a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-graph-up navicon"></i> Project</a></li>
+        <li><a href="index.html#qualification"><i class="bi bi-award-fill  navicon"></i> Qualification</a></li>
         <li><a href="index.html#achievements"><i class="bi bi-trophy navicon"></i> Achievements</a></li>
         <li><a href="index.html#publications"><i class="bi bi-journal-text navicon"></i> Publications</a></li>
         <li><a href="index.html#testimonials"><i class="bi bi-quote navicon"></i>Testimonial</a></li>
